--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>4.1.2</version>
 	</dependency>
-	
+	<dependency>
+  		<groupId>com.codoid.products</groupId>
+  		<artifactId>fillo</artifactId>
+  		<version>1.21</version>
+	</dependency>
 	
 	</dependencies>	
 	
