--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
   		<artifactId>fillo</artifactId>
   		<version>1.21</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20201115</version>
+	</dependency>
+	<dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+  </dependency>
 	
 	</dependencies>	
 	
